info box and rating part done along with css

--- a/client/src/components/chat/input/Input.css
+++ b/client/src/components/chat/input/Input.css
@@ -1,16 +1,17 @@
 .form {
   display: flex;
   border: none;
+  justify-content: space-between;
   background-color: #aed581;
 }
 
 .message {
   margin: 10px 10px 10px 10px;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
+  width:100%;
   border: solid green !important;
   border-radius: 20px !important ;
-  width: 75%;
   padding: 10px;
 }
 .input {
