--- a/client/src/components/chat/Chat.css
+++ b/client/src/components/chat/Chat.css
@@ -51,3 +51,41 @@
     width: 60%;
   }
 }
+.chat-options{
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: center;
+  background-color: #aed581;
+}
+.heading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #33691e;
+}
+.decription-container {
+  margin:10px;
+  position: relative;
+}
+
+.question-icon {
+  cursor: pointer;
+}
+
+.description-box {
+  position: absolute;
+  top: 20px; /* Adjust the position as needed */
+  left: 0;
+  display: none;
+  background-color: #f9f9f9;
+  padding: 10px;
+  width: 200px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  z-index: 9999;
+}
+
+.container:hover .description-box {
+  display: block;
+}
+
