--- a/client/src/components/home/Room.css
+++ b/client/src/components/home/Room.css
@@ -2,8 +2,9 @@
   position: relative;
   width: 200px;
   height: 150px;
-  border: 1px solid #ccc;
+  border: 20px solid #ccc;
   padding: 10px;
+  background: #9CCC65;
 }
 .info-box {
     position: absolute;
@@ -12,7 +13,6 @@
     width: 100%;
     background-color: gray;
     padding: 10px;
-    color: red;
     display: flex;
     justify-content: center;
     align-items: center;
